avoid accessing view pointer during printing

BUG: 456508